Removed Patrick's chart since the regression formula is now in Chart 9

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,5 +16,5 @@ en:
   title_chart_4: Histogram of student performance values
   title_chart_5: Performance change throughout the program by student
   title_chart_6: Performance change throughout the program separated by boys and girls
-  title_chart_8: Average performance per group by days in program
+  title_chart_8: Average performance per group versus time in program
   title_chart_9: Performance data for each student versus time in program
