Implemented: Points 1-6 from Rebecca's feedback. Number 7 requires clarification
 1) Individual Students -
 We also want to be able to display a single student’s graphs per skill and his/her composite scores over time (# of classes).  Can we add that to the filter and functionality?

 2) “Number of Evaluations” -
 I think this can be retitled to be “Quantity of Data Collected By Month”.  It won’t necessarily be “MindLeaps”.  For example, HIAS will now continue to collect data in Uganda even though our team has left.  Can “Number of Assessments” on the y-axis become “Number of Data Points Collected”?

 3) “Histogram of Student Performance Values” -
 Not sure if this one is terribly valuable to us. Let’s leave it for now but I’m thinking of hiding it for the final version.

 4) “Performance Change Throughout The Program By Gender” -
 Not sure if this one is terribly valuable to us. Let’s leave it for now but I’m thinking of hiding it for the final version.

 5) “Average Performance Per Group Versus Time in Program”
 - We would want to plot each group on a separate graph.
 - The y-axis should go from 0 to 7 in increments of 1.

 6) “Performance Data For Each Student Vs. Time in Program”
 - We should label the x-axis differently.  Perhaps: “Above Average Performance” and “Below Average Performance” or “Above Predicted Performance Level” (or something similar…we can check with McSharry for the best descriptor)

 7) Skill Graphs
 - We want these to be line graphs or scatter plots according to Time in “# of Lessons”.  So, the y-axis should be 0-7 in increments of 1 and the x-axis should be “# of Lessons”.  These should be by Group and by Student (my #1 note here).  They are not valuable to us without the time component.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,11 +8,11 @@ en:
   nr_of_assessments: Nr. of Assessments
   days_in_program: Days in program
   frequency_perc: Frequency %
-  above_regression: Above regression
-  below_regression: Below regression
+  above_regression: Above average performance
+  below_regression: Below average performance
 
   performance_vs_time: Performance vs. Time
-  title_chart_2: Number of evaluations in the MindLeaps program by month
+  title_chart_2: Quantity of Data Collected By Month
   title_chart_4: Histogram of student performance values
   title_chart_5: Performance change throughout the program by student
   title_chart_6: Performance change throughout the program separated by boys and girls
