--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,5 @@
 en:
+  student: Student
   group: Group
   gender: Gender
   month: Month
@@ -6,13 +7,11 @@ en:
   performance_change: Performance change
   nr_of_lessons: Nr. of Lessons
   nr_of_assessments: Nr. of Assessments
-  days_in_program: Days in program
   frequency_perc: Frequency %
   above_regression: Above average performance
   below_regression: Below average performance
   regression_curve: Regression curve
 
-  performance_vs_time: Performance vs. Time
   title_chart_2: Quantity of Data Collected By Month
   title_chart_4: Histogram of student performance values
   title_chart_5: Performance change throughout the program by student
