--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,7 +10,7 @@ en:
   frequency_perc: Frequency %
   above_regression: Above average performance
   below_regression: Below average performance
-  regression_curve: Regression curve
+  regression_curve: Historical ML Regression
 
   title_chart_2: Quantity of Data Collected By Month
   title_chart_4: Histogram of student performance values
